HTML and CSS validation. Removed extraneous code. Left and right padding for party bio.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <input type="radio" name="radio-buttons" id="img-1" checked />
               <li class="slide-container">
                 <div class="slide-image">
-                  <img src="assets/shoot/DSC07887.JPEG">
+                  <img alt="shoot1" src="assets/shoot/DSC07887.JPEG">
                 </div>
                 <!-- <div class="carousel-controls">
                   <label for="img-3" class="prev-slide">
@@ -41,7 +41,7 @@
               <input type="radio" name="radio-buttons" id="img-2" />
               <li class="slide-container">
                 <div class="slide-image">
-                  <img src="assets/shoot/DSC07908.JPEG">
+                  <img alt="shoot2" src="assets/shoot/DSC07908.JPEG">
                 </div>
                 <!-- <div class="carousel-controls">
                   <label for="img-1" class="prev-slide">
@@ -55,7 +55,7 @@
               <input type="radio" name="radio-buttons" id="img-3" />
               <li class="slide-container">
                 <div class="slide-image">
-                  <img src="assets/shoot/DSC07829.JPEG">
+                  <img alt="shoot3" src="assets/shoot/DSC07829.JPEG">
                 </div>
                 <!-- <div class="carousel-controls">
                   <label for="img-2" class="prev-slide">
@@ -126,12 +126,12 @@
                     <table class="entourage">
                         <tr>
                             <td class="profile"><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                            <td class="bio"><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
+                            <td class="bio-right"><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
                         </tr>
                     </table>
                     <table class="entourage">
                         <tr>
-                            <td class="bio"><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
+                            <td class="bio-left"><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
                             <td class="profile"><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
                         </tr>
                     </table>
@@ -193,13 +193,13 @@
 
                     <h3>Can I bring children?</h3>
 
-                        <p>We love your little ones! Unfortunately, due to our limited space, we respectfully request you only bring children included in the invitation.</p>
+                        <p>We love your little ones but due to our limited space, we respectfully request you only bring children included in the invitation.</p>
                     
                     <br>
 
                     <h3>How long does it take to get from the church to the reception?</h3>
 
-                        <p>Driving from the church to reception should take 15 to 20 minutes without traffic.</p>
+                        <p>Driving from the church to the reception venue should take approximately 15 without traffic.</p>
                     
                     <br>
 
