First copy of the bridal party bios.

--- a/index.html
+++ b/index.html
@@ -125,14 +125,74 @@
 
                     <table class="entourage">
                         <tr>
-                            <td class="profile"><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                            <td class="bio-right"><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
+                            <td class="profile"><div class="profile"><img alt="brittany" src="assets/profiles/michael.jpg"></div></td>
+                            <td class="bio-right"><p><span class="profile-name">Brittany Pangaliman</span><br>Brittany is Leyanne's younger and only sibling, and the social butterfly of the family. They are foodie sisters so they love trying new places to eat and get dessert. Britt's energetic spirit lights up every room she enters and her relentless pursuit of knowledge inspires everyone around her. Leyanne is filled with gratitude to have Britt by her side as her amazing sister, forever friend, and maid of honor.</p></td>
                         </tr>
                     </table>
                     <table class="entourage">
                         <tr>
-                            <td class="bio-left"><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
+                            <td class="bio-left"><p><span class="profile-name">Jacob Nickless</span><br>Jake met Daivd in his MFA program in Florida and has remained a close friend and business partner in all his films since then. He has an amazing sense of humor an dlikes to play music. He is also extremeley passionate about any project or endeavor the two of them face together.</p></td>
+                            <td class="profile"><div class="profile"><img alt="jacob" src="assets/profiles/michael.jpg"></div></td>
+                        </tr>
+                    </table>
+                    <table class="entourage">
+                        <tr>
+                            <td class="profile"><div class="profile"><img alt="whelloby" src="assets/profiles/michael.jpg"></div></td>
+                            <td class="bio-right"><p><span class="profile-name">Whelloby Pangaliman</span><br>Whelloby is Leyanne's cherished cousin-turned-bridesmaid. They grew up very closely together and have been on each other's sides throughout their many milestones. During family parties, they get a little competitutve and plauy card games like pusoy dos with their other cousins. Leyanne admires Whelloby's unwavering positivity and her ability to make anyone laugh with her cute sense of humor.</p></td>
+                        </tr>
+                    </table>
+                    <table class="entourage">
+                        <tr>
+                            <td class="bio-left"><p><span class="profile-name">Michael Papa</span><br>Michael is David's little brother who always played and bonded through their childhoods. They still play Overwatch from time to time online. He likes to draw and watch movies and anime. He is also one of the best gamers in the family.</p></td>
                             <td class="profile"><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
+                        </tr>
+                    </table>                    
+                    <table class="entourage">
+                        <tr>
+                            <td class="profile"><div class="profile"><img alt="jocelyn" src="assets/profiles/michael.jpg"></div></td>
+                            <td class="bio-right"><p><span class="profile-name">Jocelyn Solorio</span><br>Jocelyn and Leyanne first met while working together at American Eagle almost 10 years ago and immediately bonded over their shared love of clothes and shopping. Jocelyn loves going on trips and taking pictures. Throughout the years, Leyanne has gotten closer to Jocelyn's  family and spending time with them feels like an extension of her own family. What started as a playful joke about Jocelyn being a bridesmaid if Leyanne ever got married has now become a beautiful reality.</p></td>
+                        </tr>
+                    </table>
+                    <table class="entourage">
+                        <tr>
+                            <td class="bio-left"><p><span class="profile-name">Adam Wells</span><br>Adam is one of the first friends that David made during his MFA in Florida. They have helped on each other's film sets and like to grab food together. He is an encyclopedia of movies and is modestly really athletic.</p></td>
+                            <td class="profile"><div class="profile"><img alt="adam" src="assets/profiles/michael.jpg"></div></td>
+                        </tr>
+                    </table>
+                    <table class="entourage">
+                        <tr>
+                            <td class="profile"><div class="profile"><img alt="kathleen" src="assets/profiles/michael.jpg"></div></td>
+                            <td class="bio-right"><p><span class="profile-name">Kathleen Wong</span><br>Introduced to Leyanne by her beloved fiance, David, Kathleen quickly became a big part of Leyanne's life. Kahtleen has a warm personality with many hobbies and passions. From capturing beautiful moments behind the lens to crocheting cute masterpieces, Kathleen's creativity is what Leyanne loves so much about her.</p></td>
+                        </tr>
+                    </table>
+                    <table class="entourage">
+                        <tr>
+                            <td class="bio-left"><p><span class="profile-name">Joshua Abraham</span><br>Josh and David spent a lot of their childhoods together as they were the only ones in the family that were born in similar years to each other. Together they would build train sets and play video games. During Holidays they still enjoy bonding over board games and family party games. He is exceptionally smart and can get along with anyone.</p></td>
+                            <td class="profile"><div class="profile"><img alt="joshua" src="assets/profiles/michael.jpg"></div></td>
+                        </tr>
+                    </table>
+                    <table class="entourage">
+                        <tr>
+                            <td class="profile"><div class="profile"><img alt="taha" src="assets/profiles/michael.jpg"></div></td>
+                            <td class="bio-right"><p><span class="profile-name">Taha Ahmed</span><br>Taha and Leyane first met in their math class during sophomore year in high school. Since then, they have become inseperable, sharing so much laughter and countless unforgettable moments together. Taha is always on the lookout for her next adventure as she loves traveling and exploring new places. Leyane is grateful for the joy and spontaneity Taha brings to their friendship and cherishes her being one of the longest friends she has.</p></td>
+                        </tr>
+                    </table>
+                    <table class="entourage">
+                        <tr>
+                            <td class="bio-left"><p><span class="profile-name">Jordan Kost</span><br>Jordan has known David since elementary school and joined together to do films since high school, where he ontinues to aid in current DPS Films productions to this day. Jordan is a technology guru and can fix any computer problem.</p></td>
+                            <td class="profile"><div class="profile"><img alt="jordan" src="assets/profiles/michael.jpg"></div></td>
+                        </tr>
+                    </table>
+                    <table class="entourage">
+                        <tr>
+                            <td class="profile"><div class="profile"><img alt="lea" src="assets/profiles/michael.jpg"></div></td>
+                            <td class="bio-right"><p><span class="profile-name">Lea Alcantara</span><br>Lea is Leyanne's future sister-in-law. She is known for her meticulous organization skills and as an amazing dancer. Leyanne adores Lea's passion for anything Disney, knowing that together they will be sharing many magical moments as they take on this new chapter of sisterhood. With Lea by her side, Leyanne is not just gaining a bridesmaid, but a guiding light and a loveley older sister she can always turn to.</p></td>
+                        </tr>
+                    </table>
+                    <table class="entourage">
+                        <tr>
+                            <td class="bio-left"><p><span class="profile-name">Mark Alcantara</span><br>Mark is David's brother-in-law. Since starting to date Lea, David's sister, he has always been a close friend to the family. He is a good man with a contagious laughter. He is also a skilled wrestler and fisher.</p></td>
+                            <td class="profile"><div class="profile"><img alt="mark" src="assets/profiles/michael.jpg"></div></td>
                         </tr>
                     </table>
 
