FAQ with hotel block.

--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
                     <table class="entourage">
                         <tr>
                             <td class="profile"><div class="profile"><img alt="brittany" src="assets/profiles/michael.jpg"></div></td>
-                            <td class="bio-right"><p><span class="profile-name">Brittany Pangaliman</span><br>Brittany is Leyanne's younger and only sibling, and the social butterfly of the family. They are foodie sisters so they love trying new places to eat and get dessert. Britt's energetic spirit lights up every room she enters and her relentless pursuit of knowledge inspires everyone around her. Leyanne is filled with gratitude to have Britt by her side as her amazing sister, forever friend, and maid of honor.</p></td>
+                            <td class="bio-right"><p><span class="profile-name">Brittany Pangaliman</span><br>Brittany is Leyanne's younger sibling and the social butterfly of the family. They are foodie sisters so they love trying new places to eat and get dessert. Britt's energetic spirit lights up every room she enters and her relentless pursuit of knowledge inspires everyone around her. Leyanne is filled with gratitude to have Britt by her side as her amazing sister, forever friend, and maid of honor.</p></td>
                         </tr>
                     </table>
                     <table class="entourage">
                         <tr>
-                            <td class="bio-left"><p><span class="profile-name">Jacob Nickless</span><br>Jake met Daivd in his MFA program in Florida and has remained a close friend and business partner in all his films since then. He has an amazing sense of humor an dlikes to play music. He is also extremeley passionate about any project or endeavor the two of them face together.</p></td>
+                            <td class="bio-left"><p><span class="profile-name">Jacob Nickless</span><br>Jake met Daivd in his MFA program in Florida and has remained his close friend and business partner in all his films since then. He has an amazing sense of humor and likes to play music. He is also extremeley passionate about any project or endeavor the two of them face together.</p></td>
                             <td class="profile"><div class="profile"><img alt="jacob" src="assets/profiles/michael.jpg"></div></td>
                         </tr>
                     </table>
                     <table class="entourage">
                         <tr>
                             <td class="profile"><div class="profile"><img alt="whelloby" src="assets/profiles/michael.jpg"></div></td>
-                            <td class="bio-right"><p><span class="profile-name">Whelloby Pangaliman</span><br>Whelloby is Leyanne's cherished cousin-turned-bridesmaid. They grew up very closely together and have been on each other's sides throughout their many milestones. During family parties, they get a little competitutve and plauy card games like pusoy dos with their other cousins. Leyanne admires Whelloby's unwavering positivity and her ability to make anyone laugh with her cute sense of humor.</p></td>
+                            <td class="bio-right"><p><span class="profile-name">Whelloby Pangaliman</span><br>Whelloby is Leyanne's cherished cousin-turned-bridesmaid. They grew up very closely and have been by each other's sides throughout many milestones. During family parties, they get a little competitive and play card games like pusoy dos with their other cousins. Leyanne admires Whelloby's unwavering positivity and her ability to make anyone laugh with her cute sense of humor.</p></td>
                         </tr>
                     </table>
                     <table class="entourage">
@@ -150,7 +150,7 @@
                     <table class="entourage">
                         <tr>
                             <td class="profile"><div class="profile"><img alt="jocelyn" src="assets/profiles/michael.jpg"></div></td>
-                            <td class="bio-right"><p><span class="profile-name">Jocelyn Solorio</span><br>Jocelyn and Leyanne first met while working together at American Eagle almost 10 years ago and immediately bonded over their shared love of clothes and shopping. Jocelyn loves going on trips and taking pictures. Throughout the years, Leyanne has gotten closer to Jocelyn's  family and spending time with them feels like an extension of her own family. What started as a playful joke about Jocelyn being a bridesmaid if Leyanne ever got married has now become a beautiful reality.</p></td>
+                            <td class="bio-right"><p><span class="profile-name">Jocelyn Solorio</span><br>Jocelyn and Leyanne met and bonded over their shared love of clothes and shopping while working at American Eagle almost 10 years ago. Throughout the years, Leyanne has gotten closer to Jocelyn's family, who she considers as an extension of her own. What started as a playful joke about Jocelyn being a Leyanne's bridesmaid has now become a beautiful reality.</p></td>
                         </tr>
                     </table>
                     <table class="entourage">
@@ -162,7 +162,7 @@
                     <table class="entourage">
                         <tr>
                             <td class="profile"><div class="profile"><img alt="kathleen" src="assets/profiles/michael.jpg"></div></td>
-                            <td class="bio-right"><p><span class="profile-name">Kathleen Wong</span><br>Introduced to Leyanne by her beloved fiance, David, Kathleen quickly became a big part of Leyanne's life. Kahtleen has a warm personality with many hobbies and passions. From capturing beautiful moments behind the lens to crocheting cute masterpieces, Kathleen's creativity is what Leyanne loves so much about her.</p></td>
+                            <td class="bio-right"><p><span class="profile-name">Kathleen Wong</span><br>Introduced to Leyanne by her beloved fianc&eacute;, David, Kathleen quickly became a big part of Leyanne's life. Kahtleen has a warm personality with many hobbies and passions. From capturing beautiful moments behind the lens to crocheting cute masterpieces, Kathleen's creativity is what Leyanne loves so much about her.</p></td>
                         </tr>
                     </table>
                     <table class="entourage">
@@ -186,7 +186,7 @@
                     <table class="entourage">
                         <tr>
                             <td class="profile"><div class="profile"><img alt="lea" src="assets/profiles/michael.jpg"></div></td>
-                            <td class="bio-right"><p><span class="profile-name">Lea Alcantara</span><br>Lea is Leyanne's future sister-in-law. She is known for her meticulous organization skills and as an amazing dancer. Leyanne adores Lea's passion for anything Disney, knowing that together they will be sharing many magical moments as they take on this new chapter of sisterhood. With Lea by her side, Leyanne is not just gaining a bridesmaid, but a guiding light and a loveley older sister she can always turn to.</p></td>
+                            <td class="bio-right"><p><span class="profile-name">Lea Alcantara</span><br>Lea is Leyanne's future sister-in-law. She is known for her meticulous organization skills and is an amazing dancer. Leyanne adores Lea's passion for anything Disney, knowing that together they will be sharing many magical moments as they take on this new chapter of sisterhood. With Lea by her side, Leyanne is not just gaining a bridesmaid, but a guiding light and a loveley older sister she can always turn to.</p></td>
                         </tr>
                     </table>
                     <table class="entourage">
@@ -263,9 +263,9 @@
                     
                     <br>
 
-                    <h3>Will there be vegetarian/vegan options during the reception?</h3>
+                    <h3>Where do you recommend guests stay overnight?</h3>
 
-                        <p>The entrees on our menu consist primarily of meat and seafood. However, if you have any specific dietary restrictions, please notify us by e-mail as soon as possible so we can ensure we have appropriate options available.</p>
+                        <p>For your convenience, a block of rooms have been reserved at the <a class="hyperlink" href="https://maps.app.goo.gl/uTbH8f2YYh3jgig1A">Home2 Suites by Hilton Hayward</a> at a discounted rate. Please book a room in our hotel block using the link in the <a class="hyperlink" href="https://forms.gle/cnEVFfZNy8VvA71r8">RSVP form</a>.</p>
                     
                     <br>
 
