Added new email.

--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
                     <table class="entourage">
                         <tr>
                             <td class="profile"><div class="profile"><img alt="brittany" src="assets/profiles/michael.jpg"></div></td>
-                            <td class="bio-right"><p><span class="profile-name">Brittany Pangaliman</span><br>Brittany is Leyanne's younger sibling and the social butterfly of the family. They are foodie sisters so they love trying new places to eat and get dessert. Britt's energetic spirit lights up every room she enters and her relentless pursuit of knowledge inspires everyone around her. Leyanne is filled with gratitude to have Britt by her side as her amazing sister, forever friend, and maid of honor.</p></td>
+                            <td class="bio-right"><p><span class="profile-name">Brittany Pangaliman</span><br>Brittany is Leyanne's younger sibling and the social butterfly of the family. Britt's energetic spirit lights up every room she enters and her relentless pursuit of knowledge inspires everyone around her. Leyanne is filled with gratitude to have Britt by her side as her amazing sister, forever friend, and maid of honor.</p></td>
                         </tr>
                     </table>
                     <table class="entourage">
                         <tr>
-                            <td class="bio-left"><p><span class="profile-name">Jacob Nickless</span><br>Jake met Daivd in his MFA program in Florida and has remained his close friend and business partner in all his films since then. He has an amazing sense of humor and likes to play music. He is also extremeley passionate about any project or endeavor the two of them face together.</p></td>
+                            <td class="bio-left"><p><span class="profile-name">Jacob Nickless</span><br>Jake met David in his MFA program where they became close friends and business partners. Jake has an amazing sense of humor and likes to play music. He is also extremely passionate about any project or endeavor the two of them face together, including being a groom and best man!.</p></td>
                             <td class="profile"><div class="profile"><img alt="jacob" src="assets/profiles/michael.jpg"></div></td>
                         </tr>
                     </table>
                     <table class="entourage">
                         <tr>
                             <td class="profile"><div class="profile"><img alt="whelloby" src="assets/profiles/michael.jpg"></div></td>
-                            <td class="bio-right"><p><span class="profile-name">Whelloby Pangaliman</span><br>Whelloby is Leyanne's cherished cousin-turned-bridesmaid. They grew up very closely and have been by each other's sides throughout many milestones. During family parties, they get a little competitive and play card games like pusoy dos with their other cousins. Leyanne admires Whelloby's unwavering positivity and her ability to make anyone laugh with her cute sense of humor.</p></td>
+                            <td class="bio-right"><p><span class="profile-name">Whelloby Pangaliman</span><br>Whelloby is Leyanne's cherished cousin-turned-bridesmaid. They grew up very closely and have been by each other's sides throughout many milestones. At family parties, they get a little competitive and play card games like pusoy dos with their other cousins. Leyanne admires Whelloby's unwavering positivity and her ability to make anyone laugh with her cute sense of humor.</p></td>
                         </tr>
                     </table>
                     <table class="entourage">
@@ -150,7 +150,7 @@
                     <table class="entourage">
                         <tr>
                             <td class="profile"><div class="profile"><img alt="jocelyn" src="assets/profiles/michael.jpg"></div></td>
-                            <td class="bio-right"><p><span class="profile-name">Jocelyn Solorio</span><br>Jocelyn and Leyanne met and bonded over their shared love of clothes and shopping while working at American Eagle almost 10 years ago. Throughout the years, Leyanne has gotten closer to Jocelyn's family, who she considers as an extension of her own. What started as a playful joke about Jocelyn being a Leyanne's bridesmaid has now become a beautiful reality.</p></td>
+                            <td class="bio-right"><p><span class="profile-name">Jocelyn Solorio</span><br>Jocelyn and Leyanne met and bonded over their shared love of clothes and shopping while working at American Eagle almost 10 years ago. Since then, Leyanne has gotten closer to Jocelyn's family, who she considers as an extension of her own. What started as a playful joke about Jocelyn being a Leyanne's bridesmaid has now become a beautiful reality.</p></td>
                         </tr>
                     </table>
                     <table class="entourage">
@@ -162,7 +162,7 @@
                     <table class="entourage">
                         <tr>
                             <td class="profile"><div class="profile"><img alt="kathleen" src="assets/profiles/michael.jpg"></div></td>
-                            <td class="bio-right"><p><span class="profile-name">Kathleen Wong</span><br>Introduced to Leyanne by her beloved fianc&eacute;, David, Kathleen quickly became a big part of Leyanne's life. Kahtleen has a warm personality with many hobbies and passions. From capturing beautiful moments behind the lens to crocheting cute masterpieces, Kathleen's creativity is what Leyanne loves so much about her.</p></td>
+                            <td class="bio-right"><p><span class="profile-name">Kathleen Wong</span><br>Introduced to Leyanne by her beloved fianc&eacute;, David, Kathleen quickly became a big part of Leyanne's life. Kathleen has a warm personality with many hobbies and passions. From capturing beautiful moments behind the lens to crocheting cute masterpieces, Kathleen's creativity is what Leyanne loves so much about her.</p></td>
                         </tr>
                     </table>
                     <table class="entourage">
@@ -174,7 +174,7 @@
                     <table class="entourage">
                         <tr>
                             <td class="profile"><div class="profile"><img alt="taha" src="assets/profiles/michael.jpg"></div></td>
-                            <td class="bio-right"><p><span class="profile-name">Taha Ahmed</span><br>Taha and Leyane first met in their math class during sophomore year in high school. Since then, they have become inseperable, sharing so much laughter and countless unforgettable moments together. Taha is always on the lookout for her next adventure as she loves traveling and exploring new places. Leyane is grateful for the joy and spontaneity Taha brings to their friendship and cherishes her being one of the longest friends she has.</p></td>
+                            <td class="bio-right"><p><span class="profile-name">Taha Ahmed</span><br>Taha and Leyane first met in their math class during sophomore year in high school. They have since become inseperable, sharing so much laughter and countless unforgettable moments. Taha is always on the lookout for her next adventure. Leyane cherishes their long friendship and is grateful for the joy and spontaneity Taha brings to her life.</p></td>
                         </tr>
                     </table>
                     <table class="entourage">
@@ -186,7 +186,7 @@
                     <table class="entourage">
                         <tr>
                             <td class="profile"><div class="profile"><img alt="lea" src="assets/profiles/michael.jpg"></div></td>
-                            <td class="bio-right"><p><span class="profile-name">Lea Alcantara</span><br>Lea is Leyanne's future sister-in-law. She is known for her meticulous organization skills and is an amazing dancer. Leyanne adores Lea's passion for anything Disney, knowing that together they will be sharing many magical moments as they take on this new chapter of sisterhood. With Lea by her side, Leyanne is not just gaining a bridesmaid, but a guiding light and a loveley older sister she can always turn to.</p></td>
+                            <td class="bio-right"><p><span class="profile-name">Lea Alcantara</span><br>Lea is Leyanne's future sister-in-law. She is known for her meticulous organization skills and is an amazing dancer. Leyanne adores Lea's passion for anything Disney, knowing that together they will be sharing many magical moments as they begin a new chapter of sisterhood. With Lea by her side, Leyanne is gaining a bridesmaid and a guiding light in a lovely older sister.</p></td>
                         </tr>
                     </table>
                     <table class="entourage">
@@ -271,7 +271,7 @@
 
                     <h3>I have other questions, how do I contact you?</h3>
 
-                        <p>Please send us an e-mail at <a class="hyperlink" target="_blank" href="mailto:rsvp@davidley2024.wedding">rsvp@davidley2024.wedding</a>. We look forward to having you as part of our special day.</p>
+                        <p>Please send us an e-mail at <a class="hyperlink" target="_blank" href="mailto:annedavidpapa@gmail.com">annedavidpapa@gmail.com</a>. We look forward to having you as part of our special day.</p>
 
             </div>
 
