Second draft of party bios.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     </table>
                     <table class="entourage">
                         <tr>
-                            <td class="bio-left"><p><span class="profile-name">Jacob Nickless</span><br>Jake met David in his MFA program where they became close friends and business partners. Jake has an amazing sense of humor and likes to play music. He is also extremely passionate about any project or endeavor the two of them face together, including being a groom and best man!.</p></td>
+                            <td class="bio-left"><p><span class="profile-name">Jacob Nickless</span><br>Jake met David in his MFA program where they became close friends and business partners. Jake has an amazing sense of humor and likes to play music. He is also extremely passionate about any project or endeavor the two of them face together, whether it's working on a film or being David's best man.</p></td>
                             <td class="profile"><div class="profile"><img alt="jacob" src="assets/profiles/michael.jpg"></div></td>
                         </tr>
                     </table>
@@ -143,7 +143,7 @@
                     </table>
                     <table class="entourage">
                         <tr>
-                            <td class="bio-left"><p><span class="profile-name">Michael Papa</span><br>Michael is David's little brother who always played and bonded through their childhoods. They still play Overwatch from time to time online. He likes to draw and watch movies and anime. He is also one of the best gamers in the family.</p></td>
+                            <td class="bio-left"><p><span class="profile-name">Michael Papa</span><br> As his little brother, Michael has known David his entire life. Growing up, they bonded over movies, anime, and video games. Some things never change, except they both agree that Michael is now the best gamer in the family.</p></td>
                             <td class="profile"><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
                         </tr>
                     </table>                    
@@ -155,7 +155,7 @@
                     </table>
                     <table class="entourage">
                         <tr>
-                            <td class="bio-left"><p><span class="profile-name">Adam Wells</span><br>Adam is one of the first friends that David made during his MFA in Florida. They have helped on each other's film sets and like to grab food together. He is an encyclopedia of movies and is modestly really athletic.</p></td>
+                            <td class="bio-left"><p><span class="profile-name">Adam Wells</span><br>Adam is one of the first friends that David made while working on his MFA in Florida. They have both worked on each other's film sets and like to grab food together. He is an encyclopedia of movies and is (modestly) really athletic.</p></td>
                             <td class="profile"><div class="profile"><img alt="adam" src="assets/profiles/michael.jpg"></div></td>
                         </tr>
                     </table>
@@ -167,7 +167,7 @@
                     </table>
                     <table class="entourage">
                         <tr>
-                            <td class="bio-left"><p><span class="profile-name">Joshua Abraham</span><br>Josh and David spent a lot of their childhoods together as they were the only ones in the family that were born in similar years to each other. Together they would build train sets and play video games. During Holidays they still enjoy bonding over board games and family party games. He is exceptionally smart and can get along with anyone.</p></td>
+                            <td class="bio-left"><p><span class="profile-name">Joshua Abraham</span><br>Although they are cousins, David and Josh grew up like twins, having been born close together. In the past, they would build train sets and play video games. David and Josh now live on opposite sides of the country but it doesn't stop them from bonding over board games and party games during holidays. He is exceptionally smart and can get along with anyone.</p></td>
                             <td class="profile"><div class="profile"><img alt="joshua" src="assets/profiles/michael.jpg"></div></td>
                         </tr>
                     </table>
@@ -179,7 +179,7 @@
                     </table>
                     <table class="entourage">
                         <tr>
-                            <td class="bio-left"><p><span class="profile-name">Jordan Kost</span><br>Jordan has known David since elementary school and joined together to do films since high school, where he ontinues to aid in current DPS Films productions to this day. Jordan is a technology guru and can fix any computer problem.</p></td>
+                            <td class="bio-left"><p><span class="profile-name">Jordan Kost</span><br>Jordan has known David since grade school and throughout high school they nurtured their passion in filmmaking. Jordan is a technology guru and can fix any computer problem. Like their friendship, Jordan and David's passion for film persists in their continued collaboration. </p></td>
                             <td class="profile"><div class="profile"><img alt="jordan" src="assets/profiles/michael.jpg"></div></td>
                         </tr>
                     </table>
@@ -191,7 +191,7 @@
                     </table>
                     <table class="entourage">
                         <tr>
-                            <td class="bio-left"><p><span class="profile-name">Mark Alcantara</span><br>Mark is David's brother-in-law. Since starting to date Lea, David's sister, he has always been a close friend to the family. He is a good man with a contagious laughter. He is also a skilled wrestler and fisher.</p></td>
+                            <td class="bio-left"><p><span class="profile-name">Mark Alcantara</span><br>Mark is David's brother-in-law but even before marrying David's sister Lea, Mark has been very close to the family. Mark is a man of many talents: he is a skilled wrestler and fisher. You can find Mark by his contagious laughter.</p></td>
                             <td class="profile"><div class="profile"><img alt="mark" src="assets/profiles/michael.jpg"></div></td>
                         </tr>
                     </table>
