--- a/index.html
+++ b/index.html
@@ -237,7 +237,24 @@
 						</form>
 					</div>
 
-				<a id="faq"></a> <div class="line-box"><h2>FAQ</h2><hr class="right"></div>
+				<div class="line-box"><h2>Our Thanks</h2><hr class="right"></div>
+
+					<table class="entourage">
+						<tr>
+							<td class="parents"><div class="profile"><img alt="pang" src="assets/profiles/pang.jpg"></div></td>
+							<td class="parents"><div class="profile"><img alt="papa" src="assets/profiles/papa.jpg"></div></td>
+						</tr>
+					</table>
+
+					<p>To our wonderful parents &mdash;</p>
+
+					<p>Brian & Leilanie Pangaliman and Edmund & Lani Papa,<p>
+
+					<p>We are incredibly grateful for the endless love, support, and encouragement you have given us throughout our journey. Thank you for your unconditional love and for always being there for us. You are our greatest role models and your guidance has shaped us into the people we are today. We are deeply blessed to have you as our parents and to share this wonderful occasion with you. Thank you for everything you have done and continue to do, we love you more than words can express.</p>
+
+					<p><span class="profile-name">Leyanne & David</span></p>
+
+				<a id="faq"></a> <div class="line-box"><hr class="left"><h2>FAQ</h2></div>
 
 					<h3>What is the dress code?</h3>
 
