--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 			<title>With Hearts Full of Joy</title>
 
+			<meta http-equiv="Cache-control" content="max-age=31536000">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meta property="og:image" content="assets/preview.JPEG">
 			<meta property="og:image:width" content="1200">
